[package]
name = "bajkov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "*" }
console_log = "*"
log = "*"
console_error_panic_hook = "*"
getrandom = { version = "0.2.8", features = ["js"] }



# https://doc.rust-lang.org/cargo/reference/profiles.html
#[profile.release-lto]
#inherits = "release"
#lto = true
#codegen-units = 1